--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "daisyui": "^4.12.23",
     "firebase": "^11.1.0",
+    "lottie-react": "^2.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
