--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "react-countup": "^6.5.3",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-paginate": "^8.2.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.0",
+    "react-spinner": "^0.2.7",
     "react-spinners": "^0.15.0",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
   },
